# noise-c

./: CMakeLists.txt
src/backend/ref/: cipher-chachapoly.c  dh-curve25519.c
src/backend/sodium/: cipher-chachapoly.c  dh-curve25519.c
src/protocol/: CMakeLists.txt
