cmake_minimum_required(VERSION 3.5)
project(noise-c LANGUAGES C)

option(USE_LIBSODIUM "Use libsodium" ON)
option(USE_OPENSSL "Use OpenSSL" OFF)

find_package(PkgConfig)
if(USE_LIBSODIUM)
    pkg_check_modules(LIBSODIUM libsodium)
    if(NOT LIBSODIUM_FOUND)
        message(FATAL_ERROR "USE_LIBSODIUM=ON but libsodium was not found by pkg-config")
    endif()
endif()

if(USE_OPENSSL)
    pkg_check_modules(OPENSSL openssl)
    if(NOT OPENSSL_FOUND)
        message(STATUS "OpenSSL not found, disabling")
        set(USE_OPENSSL OFF)
    endif()
endif()
option(ED448_ARCH "Specify Ed448-Goldilocks arch" "")

if(NOT ED448_ARCH)
    if(CMAKE_SYSTEM_PROCESSOR STREQUAL "x86_64")
        set(ED448_ARCH arch_x86_64)
    elseif(CMAKE_SIZEOF_VOID_P EQUAL 8)
        set(ED448_ARCH arch_ref64)
    else()
        set(ED448_ARCH arch_32)
    endif()
endif()

add_subdirectory(src/protocol)
add_subdirectory(src/keys)
add_subdirectory(src/protobufs)

include(GNUInstallDirs)
install(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
